Fixed bug #77081 ftruncate() changes seek pointer in c mode